# apt-encoder

./: CMakeLists.txt  README.md
apt-colorm/: CMakeLists.txt
apt-encoder/: CMakeLists.txt  audioset.c  audioset.h  main.c  main.h
aptcode/: CMakeLists.txt  aptcode.h
image/: CMakeLists.txt
img-table/: CMakeLists.txt
